# mlbb-automation

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
python-automation/: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
python-automation/mlbb_automation/: __init__.py  __main__.py
python-automation/mlbb_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python-automation/mlbb_automation/actions/: __init__.py  executor.py
python-automation/mlbb_automation/config/: __init__.py  settings.py
python-automation/mlbb_automation/cv/: __init__.py  ocr.py  screen_detector.py  state_machine.py  template_matcher.py
python-automation/mlbb_automation/device_farm/: __init__.py  adb_connector.py  base.py  selectel_client.py
python-automation/mlbb_automation/logging/: __init__.py  logger.py
python-automation/mlbb_automation/recovery/: __init__.py  manager.py
python-automation/mlbb_automation/scenarios/: __init__.py  engine.py  watchdog.py
python-automation/mlbb_automation/scenarios/steps/: __init__.py  google_account.py  install_mlbb.py  mlbb_onboarding.py  payment.py
python-automation/mlbb_automation/templates/: README.md
python-automation/scripts/: capture_template.py  run_simple.py
python-automation/tests/: test_adb_connector.py  test_cv_ocr.py  test_cv_screen_detector.py  test_cv_state_machine.py  test_cv_template_matcher.py  test_executor_retry.py  test_scenarios_engine.py  test_scenarios_steps.py  test_selectel_client_smoke.py  test_watchdog.py
(+2 files in other folders)
